<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@android:drawable/editbox_background"
        android:text="@string/players"
        android:textColor="#ff0000"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:hint="@string/hint_name"
        android:inputType="textPersonName|textCapWords" />

    <EditText
        android:id="@+id/etLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:hint="@string/hint_location"
        android:inputType="text" />

    <Button
        android:id="@+id/btEnterData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLocation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/insert_player" />

    <Button
        android:id="@+id/btDisplayData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btEnterData"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/display_players" />
</RelativeLayout>
